--- a/src/styles/_0. nav.scss
+++ b/src/styles/_0. nav.scss
@@ -6,12 +6,14 @@
     margin-top: 2rem;
     align-items: center;
     width: 100%;
-    max-width: 98vw;
     z-index: 12;
-
+    
     &__logo{
         margin-left: 5rem;
-        @include max-width(small){margin-left: 3rem;}
+        @include max-width(small){
+            margin-left: 3rem;
+            max-width: 98vw;
+        }
     }
 
     // desktop nav links
